Fixed graph spacing issues

--- a/Front-End/fab/src/app/tab1/tab1.page.scss
+++ b/Front-End/fab/src/app/tab1/tab1.page.scss
@@ -14,3 +14,8 @@
   margin-left: 40%;
   margin-right: 40%;
 }
+
+canvas{
+  width: 125%;
+  height: 300%;
+}
